# rs_cdr_generator

./: .dockerignore  .github_workflow.md  .gitignore  Cargo.toml  DEEP_OPTIMIZATION_ANALYSIS.md  Dockerfile.bytehound  OPTIMIZATIONS.md  OPTIMIZATION_REPORT.md  PERFORMANCE_IMPROVEMENT_PLAN.md  PERFORMANCE_SUMMARY.md  PROFILING.md  PROFILING_ANALYSIS.md  PROFILING_QUICKSTART.md  QUICKSTART.md  README.md  SUBSCRIBER_DATABASE.md  bench_config_100k.yaml  bench_config_10k.yaml  bench_config_1k.yaml  bench_config_1m.yaml  benchmark.sh  benchmark_results.txt  compare_benchmarks.py  config_40m.yaml  docker-compose.yml  example_config.yaml  profile_flamegraph.sh  profile_heaptrack.sh  profile_malloc.sh  profile_memory.sh  profile_perf.sh  profile_sample.sh  run_example.sh  run_redb_benchmarks.sh  test_config.yaml  test_config_chunked.yaml
.claude/: instrucions.md
benches/: README.md  cdr_benchmark.rs  cdr_generation.rs  compression.rs  csv_writing.rs  end_to_end.rs
benches/configs/: benchmark_micro.yaml  benchmark_profiling.yaml  benchmark_throughput.yaml
config_examples/: README.md  large_scale.yaml  medium_production.yaml  small_test.yaml  subscriber_db_example.yaml
scripts/: generate_flamegraphs.sh  run_benchmarks.sh
src/: async_writer.rs  cells.rs  compression.rs  config.rs  event_pool.rs  generators.rs  identity.rs  lib.rs  main.rs  subscriber_db.rs  subscriber_db_arrow.rs  subscriber_db_generator.rs  subscriber_db_redb.rs  timezone_utils.rs  utils.rs  writer.rs
tests/: README.md  event_counts_test.rs
