[package]
name = "rs_cdr_generator"
version = "5.1.0"
edition = "2021"
authors = ["CDR Generator Team"]
description = "Unified CDR generator (CALL/SMS/DATA) for large-scale synthetic telecom datasets - Rust port"

[dependencies]
# CLI argument parsing
clap = { version = "4.5", features = ["derive"] }

# Random number generation
rand = "0.8"
rand_distr = "0.4"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# CSV handling
csv = "1.3"

# Arrow for binary columnar format
arrow = "53"
arrow-ipc = "53"

# Compression/archiving
flate2 = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Parallel processing
rayon = "1.10"

# Async runtime for batched I/O
tokio = { version = "1", features = ["full"] }
crossbeam-channel = "0.5"

# Math functions
num-traits = "0.2"

# Path handling
pathdiff = "0.2"

# CPU count detection
num_cpus = "1.16"

# Memory profiling (optional)
dhat = { version = "0.3", optional = true }

[features]
dhat-heap = ["dhat"]

# Testing
[dev-dependencies]
tempfile = "3.8"
criterion = { version = "0.5", features = ["html_reports"] }

[[bin]]
name = "rs_cdr_generator"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

# Profile for benchmarking with criterion
[profile.bench]
inherits = "release"
debug = true

# Profile for flamegraph and detailed profiling
[profile.profiling]
inherits = "release"
debug = true
strip = false

# Benchmark configurations
[[bench]]
name = "cdr_benchmark"
harness = false
